# eizo

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.kata/: aumentar-cobertura-testes.yaml
src/eizo/: __init__.py  __main__.py  cli.py  indexer.py
src/eizo/graph/: models.py  schema.py  store.py
src/eizo/mcp/: server.py
src/eizo/parser/: base.py  python.py  typescript.py
src/eizo/queries/: analysis.py  export.py  impact.py  search.py  trace.py
src/eizo/static/: graph_view.html.template
tests/: conftest.py  test_analysis.py  test_cli.py  test_coverage_gaps.py  test_export.py  test_export_html.py  test_incremental.py  test_indexer.py  test_indexer_extended.py  test_main.py  test_mcp_server.py  test_models.py  test_parser_base.py  test_parser_python.py  test_parser_python_extended.py  test_parser_typescript.py  test_parser_typescript_extended.py  test_queries_extended.py  test_queries_impact.py  test_queries_search.py  test_queries_trace.py  test_schema.py  test_store.py  test_store_extended.py
